0.9.3a2

  * Removed some casts in _mysql_init() that caused problems with
    Python 2.3. The type for tp_free was changed from destructor
    to freefunc. Removing the casts make both 2.2 and 2.3 happy.

0.9.3a1

  * Fixed the bug that prevented member access.

  * Embedded server support. Can't get it use InnoDB tables yet.
    However, MyISAM (default) tables seem to work fine.

0.9.2

  * BUG: When using Python 1.5.2, if the connect fails, Python seems
    to eventually crash with a segfault. In my case, this seems to
    only happen on exit. I just have not been able to track this one
    down.  I still want to support Python 1.5.2, and I'm probably just
    missing something very subtle. There's no problem with either
    Python 2.1.3 or 2.2.1; I have not tested with 1.6 through 2.1.2
    nor 2.2, nor do I plan to, but there should be no issues with
    other versions, except for the above issue with 1.5.2.

  * Memory API updates. The GC memory allocator is used when Python
    2.2 or newer is used.

  * Minor RPM packaging cleanups.

  * cursor.execute(query) with no args leaves the original query string
    alone; it no longer tries to do query % (). This is to maintain
    backwards compatibility. The only time this is an issue is if your
    query has percent signs (%) in it, as in the SQL wildcard used for
    LIKE comparisions. I strongly recommend passing any string literals
    as parameters to avoid this issue.

0.9.2c3

  * Did some more setup cleanups. Apparently on non-server versions of
    MacOSX, the MySQL stuff installs in /sw instead of /usr/local.

  * There's now a cursor._execute(), used by execute() and executemany(),
    when does NOT clear cursor.messages. Internal use only. This is so
    all messages can be kept with executemany().

  * Fixed a memory leak (cursor+traceback) I introduced when reworking
    the errorhandler code.

  * If both conv and unicode options were given to connect, things
    broke. (Skip Montanaro)
